--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "node-localstorage": "^2.1.6",
-    "onoff": "^6.0.0",
-    "telegraf": "^3.38.0"
+    "dotenv": "16.4.5",
+    "node-localstorage": "3.0.5",
+    "onoff": "6.0.3",
+    "telegraf": "4.16.3"
   }
 }
